--- a/Script/iOS/Amjula Music Theory/Amjula Music Theory/Info.plist
+++ b/Script/iOS/Amjula Music Theory/Amjula Music Theory/Info.plist
@@ -40,5 +40,24 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+
+<key>NSAppTransportSecurity</key>
+<dict>
+      <key>NSAllowsArbitraryLoads</key> 
+      <false/>
+       <key>NSExceptionDomains</key>
+       <dict>
+            <key>amju.com</key>
+            <dict>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+                <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSTemporaryExceptionMinimumTLSVersion</key>
+                <string>TLSv1.1</string>
+            </dict>
+       </dict>
+</dict>
+
 </dict>
 </plist>
