--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -299,12 +299,14 @@
     <ClCompile Include="..\..\..\..\Source\GuiMusicKb.cpp" />
     <ClCompile Include="..\..\..\..\Source\GuiMusicScore.cpp" />
     <ClCompile Include="..\..\..\..\Source\Hints.cpp" />
+    <ClCompile Include="..\..\..\..\Source\LurkMsg.cpp" />
     <ClCompile Include="..\..\..\..\Source\Md2SceneNode.cpp" />
     <ClCompile Include="..\..\..\..\Source\MultiChoiceQuestion.cpp" />
     <ClCompile Include="..\..\..\..\Source\MusicalTermQuestion.cpp" />
     <ClCompile Include="..\..\..\..\Source\Dictionary.cpp" />
     <ClCompile Include="..\..\..\..\Source\MusicEvent.cpp" />
     <ClCompile Include="..\..\..\..\Source\MySceneGraph.cpp" />
+    <ClCompile Include="..\..\..\..\Source\NetSend.cpp" />
     <ClCompile Include="..\..\..\..\Source\Page.cpp" />
     <ClCompile Include="..\..\..\..\Source\PageFactory.cpp" />
     <ClCompile Include="..\..\..\..\Source\PageMultiChoice.cpp" />
@@ -314,6 +316,7 @@
     <ClCompile Include="..\..\..\..\Source\PrintGui.cpp" />
     <ClCompile Include="..\..\..\..\Source\Question.cpp" />
     <ClCompile Include="..\..\..\..\Source\ScoreBuilder.cpp" />
+    <ClCompile Include="..\..\..\..\Source\SerialReqManager.cpp" />
     <ClCompile Include="..\..\..\..\Source\ShareManager.cpp" />
     <ClCompile Include="..\..\..\..\Source\Startup.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='GTest|Win32'">true</ExcludedFromBuild>
@@ -353,6 +356,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\Source\Topic.cpp" />
     <ClCompile Include="..\..\..\..\Source\UserProfile.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Version.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Source\Consts.h" />
@@ -387,12 +391,14 @@
     <ClInclude Include="..\..\..\..\Source\GuiMusicKb.h" />
     <ClInclude Include="..\..\..\..\Source\GuiMusicScore.h" />
     <ClInclude Include="..\..\..\..\Source\Hints.h" />
+    <ClInclude Include="..\..\..\..\Source\LurkMsg.h" />
     <ClInclude Include="..\..\..\..\Source\Md2SceneNode.h" />
     <ClInclude Include="..\..\..\..\Source\MultiChoiceQuestion.h" />
     <ClInclude Include="..\..\..\..\Source\MusicalTermQuestion.h" />
     <ClInclude Include="..\..\..\..\Source\Dictionary.h" />
     <ClInclude Include="..\..\..\..\Source\MusicEvent.h" />
     <ClInclude Include="..\..\..\..\Source\MySceneGraph.h" />
+    <ClInclude Include="..\..\..\..\Source\NetSend.h" />
     <ClInclude Include="..\..\..\..\Source\Page.h" />
     <ClInclude Include="..\..\..\..\Source\PageDrawOnStave.h" />
     <ClInclude Include="..\..\..\..\Source\PageFactory.h" />
@@ -403,6 +409,7 @@
     <ClInclude Include="..\..\..\..\Source\PlayWav.h" />
     <ClInclude Include="..\..\..\..\Source\Question.h" />
     <ClInclude Include="..\..\..\..\Source\ScoreBuilder.h" />
+    <ClInclude Include="..\..\..\..\Source\SerialReqManager.h" />
     <ClInclude Include="..\..\..\..\Source\ShareManager.h" />
     <ClInclude Include="..\..\..\..\Source\Tappable.h" />
     <ClInclude Include="..\..\..\..\Source\TappableFactory.h" />
@@ -411,10 +418,12 @@
     <ClInclude Include="..\..\..\..\Source\TappableZoomInfoLeaf.h" />
     <ClInclude Include="..\..\..\..\Source\Topic.h" />
     <ClInclude Include="..\..\..\..\Source\UserProfile.h" />
+    <ClInclude Include="..\..\..\..\Source\Version.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\Bass\Bass2.3\Win\bass.lib" />
     <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\Bass\Bass2.3\Win\bassmidi.lib" />
+    <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\Curl\Win32\lib\libcurl.lib" />
     <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\GLUT\glut32.lib" />
     <Library Include="..\..\..\..\Source\ThirdParty\googletest\msvc\gtest\Debug\gtestd.lib" />
   </ItemGroup>
@@ -435,6 +444,7 @@
     <Text Include="..\..\..\..\Assets\Course\whats_the_scale.txt" />
     <Text Include="..\..\..\..\Assets\Course\whats_the_time_sig.txt" />
     <Text Include="..\..\..\..\Assets\Course\whats_the_tonic_triad.txt" />
+    <Text Include="..\..\..\..\Assets\Course\which_clef.txt" />
     <Text Include="..\..\..\..\Assets\Gui\blackboard_erase.txt" />
     <Text Include="..\..\..\..\Assets\Gui\boilerplate.txt" />
     <Text Include="..\..\..\..\Assets\Gui\compound_glyphs.txt" />
