--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -445,6 +445,7 @@
     <Text Include="..\..\..\..\Assets\Course\expl\ttriad-gmaj-treb.txt" />
     <Text Include="..\..\..\..\Assets\Course\higher_or_lower.txt" />
     <Text Include="..\..\..\..\Assets\Course\name_the_note.txt" />
+    <Text Include="..\..\..\..\Assets\Course\note-equivs.txt" />
     <Text Include="..\..\..\..\Assets\Course\note-rest-names.txt" />
     <Text Include="..\..\..\..\Assets\Course\note-rest-symbols.txt" />
     <Text Include="..\..\..\..\Assets\Course\notes_on_bass_clef_with_accidentals.txt" />
@@ -455,6 +456,7 @@
     <Text Include="..\..\..\..\Assets\Course\notes_on_treble_clef.txt" />
     <Text Include="..\..\..\..\Assets\Course\notes_on_treble_clef_with_accidentals.txt" />
     <Text Include="..\..\..\..\Assets\Course\note_lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Course\rest-equivs.txt" />
     <Text Include="..\..\..\..\Assets\Course\whats_the_key_sig.txt" />
     <Text Include="..\..\..\..\Assets\Course\whats_the_scale.txt" />
     <Text Include="..\..\..\..\Assets\Course\whats_the_time_sig.txt" />
