Fix for Mac makefile - make runsetup after make clean

--- a/Script/Macosx/Makefile
+++ b/Script/Macosx/Makefile
@@ -41,9 +41,13 @@ runnoglue:
 	./macgame
 
 
-runsetup:
+runsetupold:
 	cp $(TARGET) $(RUNDIR); \
 	cp $(BASSPATH)/libbassmidi.dylib $(RUNDIR); \
 	cp $(BASSPATH)/mp3-free/libbass.dylib $(RUNDIR); 
+
+runsetup:
+	cp $(BASSPATH)/libbassmidi.dylib $(BUILD); \
+	cp $(BASSPATH)/mp3-free/libbass.dylib $(BUILD); 
 
 
